# huqi

./: .gitignore  README.md  build_exe_local.bat  pyproject.toml  run.bat
.github/workflows/: build-windows-exe.yml
scripts/: build_windows_exe.bat
src/attendance_tool/: __init__.py  calculator.py  cli.py  excel_processor.py  gui.py  main.py  models.py  time_utils.py
tests/: test_calculator.py  test_excel_processor.py  test_time_utils.py
